k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payd-backend
  labels:
    app: payd
    component: backend
spec:
  type: ClusterIP
  selector:
    app: payd
    component: backend
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
