k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payd-frontend
  labels:
    app: payd
    component: frontend
spec:
  type: ClusterIP
  selector:
    app: payd
    component: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
